[package]
name = "mrbgpdv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
bytes = "1"
rtnetlink = "0.9.0"
futures = "0.3.11"
ipnetwork = "0.18.0"
