[package]
name = "mrbgpdv2second"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.3"
rtnetlink = "0.7.0"
tokio = { version = "1.0.1", features = ["full"] }
futures = "0.3.11"
